2006-04-12  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/xprof/mangle.c (mangleClassType): 
	Added missing cast to ptrdiff_t to fix compiler warning.

2006-04-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/readClass.c (readSignatureAttribute): 
	Guarded to avoid building it for kaffeh.

2006-04-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/classMethod.h: Made 
	methods.c.bcode.codelen an unsigned int.

	* kaffe/kaffevm/code-analyse.c (analyzeBasicBlock): 
	Removed unnecessary casts. Moved function up, so
	that the static prototype could be removed. Changed
	parameter pc's type to uint32.
	(analyzeMethod): Made pc an uint32.

	* kaffe/kaffevm/verifier/verify3a.c (verifyMethod3a): 
	Throw a verifier error if code length is 0.

2006-04-06  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/object.c (newArrayChecked): Added assert to check
	that count is >= 0. Simplified a bit, and added casts to fix
	compiler warnings.

	* include/Arrays.h: Explicitely name structs in typedefs.

	* kaffe/kaffevm/jit3/machine.h, 
	kaffe/kaffevm/jit/machine.h,
	kaffe/kaffevm/intrp/machine.h: Include Arrays.h.

	* kaffe/kaffevm/object.h (OBJECT_DTABLE_OFFSET) 
	(ARRAY_SIZE_OFFSET, ARRAY_DATA_OFFSET): Use offsetof instead of
	wild casts.

2006-04-05  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/CRC32.c: Use zlib implementation. Added
	explicit casts to fix compiler warnings.

2006-04-05  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/zip/Adler32.c (java_util_zip_Adler32_update1) 
	(java_util_zip_Adler32_update): Added explicit casts to fix
	compiler warnings.

2006-04-03  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/boehm/cord/de.c,
	libraries/clib/target/generic/target_generic.h,
	libraries/clib/target/generic/target_generic_misc.h:
	Fixed remaining pscan warnings.

2006-04-03  Dalibor Topic  <robilad@kaffe.org>

	* THIRDPARTY: Updated fastjar to gcc 4.1.0.

	* external/gcc/fastjar: Updated to 4.1.0.
